# LIMINAL

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LIMINAL.code-workspace  README.md  docker-compose.yml  pytest.ini  requirements.txt  setup.py
.archive/: SYNTHESIS_REPORT_CLAUDE.md  SYNTHESIS_REPORT_CODEX.md  SYNTHESIS_REPORT_GEMINI.md  prompt.md
.claude/: CLAUDE.md  settings.json
.uncan/: _base.md
config/: default.yaml  liminal.config.yaml
docs/: CONTRIBUTING.md  Developer_Setup.md  LIMINAL_Multi_AI_Assessment_Synthesis_Comprehensive_Report.md  LIMINAL_Multi_AI_Assessment_Synthesis_Documentation_Improvement_Roadmap.md  LIMINAL_Multi_AI_Assessment_Synthesis_Executive_Decision_Matrix.md  LIMINAL_Multi_AI_Assessment_Synthesis_Implementation_Risk_Register.md  MVP_Features.md  README.md  Technical_Architecture.md  benchmarking-protocol.md  liminal-metrics.md  liminal-trm.md  liminal-whitepaper.md  research-methodology.md  risk-mitigation.md
liminal/: __init__.py
liminal-v1/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
liminal-v1/src-tauri/: Cargo.toml  FEATURES.md  tauri.conf.json
liminal-v1/src-tauri/capabilities/: default.json
liminal-v1/src-tauri/src/: agent.rs  config.rs  consensus.rs  executor.rs  health.rs  lib.rs  main.rs  metrics.rs  router.rs  territory.rs
liminal-v1/src-tauri/src/director/: claude_agent.rs  executor.rs  mod.rs  orchestrator.rs  parser.rs  runbook.rs  session.rs
liminal-v1/src-tauri/src/ledger/: mod.rs
liminal-v1/src-tauri/tests/: integration_test.rs  runbook_execution_test.rs
(+169 files in other folders)
