[package]
name = "liminal-v1"
version = "0.1.0"
description = "LIMINAL V1 MVP"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"

[[bin]]
name = "liminal-v1"
path = "src/main.rs"

[lib]
name = "liminal_v1"
path = "src/lib.rs"

[features]
default = []

[dev-dependencies]
tempfile = "3"
